# Internship-Ds-Project-2

./: .gitignore  README.md  README_UI.md  requirements_ui.txt
Final-ds-projects/ner_json_deberta_fullft_multi/: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
Final-ds-projects/ner_json_deberta_fullft_multi/configs/: infer.yaml
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/: __init__.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/artifacts/: io.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/cli/: evaluate.py  train.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/config/: labels.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/data/: load.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/evaluation/: metrics.py  runner.py
Final-ds-projects/ner_json_deberta_fullft_multi/src/nerjson/inference/: bio.py  predict.py
ner_json_deberta_fullft_multi_4ds/: .gitignore  README.md  pyproject.toml
ner_json_deberta_fullft_multi_4ds/configs/: infer.yaml  train.yaml
ner_json_deberta_fullft_multi_4ds/src/nerjson/artifacts/: io.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/cli/: evaluate.py  infer.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/config/: labels.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/data/: load.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/inference/: bio.py  json_emit.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/preprocessing/: align.py
ner_json_deberta_fullft_multi_4ds/src/nerjson/training/: runner.py
(+87 files in other folders)
