[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerjson-fullft-multi4"
version = "0.1.0"
description = "NER token classification pipeline for 4 datasets (CoNLL, OntoNotes5, WikiANN(en), BTC) with NER→JSON."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
