[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nerjson-fullft-pipeline"
version = "0.1.0"
description = "Proper ML pipeline refactor for DeBERTa token classification with NER→JSON artifacts."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
